@@ -281,7 +281,6 @@ public class ListDialogField extends DialogField {
 		gd.horizontalAlignment= GridData.FILL;
 		gd.grabExcessHorizontalSpace= true;
 		gd.verticalAlignment= GridData.BEGINNING;
-		gd.heightHint = SWTUtil.getButtonHeigthHint(button);
 		gd.widthHint = SWTUtil.getButtonWidthHint(button);
 	
 		button.setLayoutData(gd);
