@@ -80,7 +80,6 @@ public class SelectionButtonDialogField extends DialogField {
 		gd.horizontalSpan= nColumns;
 		gd.horizontalAlignment= GridData.FILL;
 		if (fButtonStyle == SWT.PUSH) {
-			gd.heightHint = SWTUtil.getButtonHeigthHint(button);
 			gd.widthHint = SWTUtil.getButtonWidthHint(button);
 		}			
 		
