@@ -70,10 +70,10 @@ public class SWTUtil {
 	/**
 	 * Returns a height hint for a button control.
 	 */
-	public static int getButtonHeigthHint( Button button ) {
-		PixelConverter converter = new PixelConverter( button );
-		return converter.convertVerticalDLUsToPixels( IDialogConstants.BUTTON_HEIGHT );
-	}
+//	public static int getButtonHeigthHint( Button button ) {
+//		PixelConverter converter = new PixelConverter( button );
+//		return converter.convertVerticalDLUsToPixels( IDialogConstants.BUTTON_HEIGHT );
+//	}
 
 	/**
 	 * Sets width and height hint for the button control. <b>Note:</b> This
@@ -85,8 +85,8 @@ public class SWTUtil {
 		Assert.isNotNull( button );
 		Object gd = button.getLayoutData();
 		if ( gd instanceof GridData ) {
-			((GridData)gd).heightHint = getButtonHeigthHint( button );
 			((GridData)gd).widthHint = getButtonWidthHint( button );
+			((GridData)gd).horizontalAlignment = GridData.FILL;	 
 		}
 	}
 }
