@@ -1,4 +1,15 @@
 2005-01-11 Mikhail Khodjaiants
+	Replaced deprecated methods and constants. Cleanup.
+	* SWTUtil.java
+	* EnableVariablesActionDelegate.java
+	* RemoveGlobalsActionDelegate.java
+	* ListDialogField.java
+	* SelectionButtonDialogField.java
+	* StringButtonDialogField.java
+	* CDebugPreferencePage.java
+	* CBreakpointPropertyPage.java
+
+2005-01-11 Mikhail Khodjaiants
 	Use the asynchronous implementation for resume, suspend, step etc provided by eclipse 3.1.
 	* plugin.xml
 	* AbstractDebugActionDelegate.java
