@@ -1,3 +1,9 @@
+2005-01-11 Mikhail Khodjaiants
+	Replaced deprecated methods and constants.
+	* ListDialogField.java
+	* SelectionButtonDialogField.java
+	* StringButtonDialogField.java
+
 2004-11-11 Mikhail Khodjaiants
 	Fix for bug 75627: Incorrect limit to port numbers.
 	* TCPSettingsBlock.java
